--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,12 +12,16 @@ body {
 }
 .imgThumbs{
   width: 20%;
-  height: 330px;
+  height: 350px;
   margin: 2% 2%;
   float: left;
   overflow: hidden;
 }
+.fa{
+  max-height: 0px;
+  overflow: hidden;
 
-.displayed{
+ &.displayed{
   max-height: 30px;
+}
 }
